fixed prediction on lstm_attention

--- a/lstm_attention.ipynb
+++ b/lstm_attention.ipynb
@@ -34,12 +34,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-29 22:56:04.484018: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-05-29 22:56:04.524413: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-05-29 22:56:04.524445: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-05-29 22:56:04.525543: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-05-29 22:56:04.533005: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2025-05-30 03:13:38.189181: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-05-30 03:13:38.189251: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-05-30 03:13:38.190869: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-05-30 03:13:38.201132: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
     {
@@ -275,14 +274,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Standardizing 10000 scenes using 80 cores...\n"
+      "Standardizing 10000 scenes using 40 cores...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing scenes: 100%|██████████| 10000/10000 [00:15<00:00, 655.82it/s]\n"
+      "Processing scenes: 100%|██████████| 10000/10000 [00:15<00:00, 650.39it/s]\n"
      ]
     },
     {
@@ -383,6 +382,31 @@
     "    model = keras.models.load_model(model_path, custom_objects=custom_objects, safe_mode=False)\n",
     "    print(f\"Keras model loaded from {model_path}\")\n",
     "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c2f049ff-a26d-41a5-aa7e-b0ea462265f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-30 03:14:04.842669: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 10534 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1080 Ti, pci bus id: 0000:08:00.0, compute capability: 6.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keras model loaded from lstm2.keras\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = load_model()"
    ]
   },
   {
@@ -1050,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "f303823d230afdb9",
    "metadata": {
     "ExecuteTime": {
@@ -1082,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "10132f4e6ee1e1df",
    "metadata": {
     "ExecuteTime": {
@@ -1149,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "e475f845b5d73bae",
    "metadata": {
     "ExecuteTime": {
@@ -1231,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "ac3b5ab02eaf908a",
    "metadata": {
     "ExecuteTime": {
@@ -1243,52 +1267,61 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9998 valid sequences.\n",
+      "Input shape: (9998, 50, 6), Delta Output shape: (9998, 60, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "# # figure out stats\n",
-    "# def stats():\n",
-    "#     Tobs = 50\n",
-    "#     Tpred = 60\n",
-    "#     n_scenarios = train_data.shape[0]\n",
-    "#     X_train_raw = []\n",
-    "#     y_train_deltas = []\n",
-    "# \n",
-    "#     for i in range(n_scenarios):\n",
-    "#         ego_data = train_data[i, 0, :, :]\n",
-    "#         if np.all(ego_data == 0):\n",
-    "#             continue\n",
-    "# \n",
-    "#         observed = ego_data[:Tobs]            # shape (50, 6)\n",
-    "#         future = ego_data[Tobs:Tobs+Tpred, :2]\n",
-    "#         last_obs_pos = observed[-1, :2]\n",
-    "# \n",
-    "#         if np.any(np.all(observed == 0, axis=1)) or np.any(np.all(future == 0, axis=1)):\n",
-    "#             continue\n",
-    "# \n",
-    "#         # Compute deltas w.r.t. previous future timestep\n",
-    "#         delta = np.diff(np.vstack([last_obs_pos, future]), axis=0)  # (60, 2)\n",
-    "# \n",
-    "#         X_train_raw.append(observed)\n",
-    "#         y_train_deltas.append(delta)\n",
-    "# \n",
-    "# \n",
-    "#     X_train = np.array(X_train_raw)\n",
-    "#     y_train = np.array(y_train_deltas)\n",
-    "# \n",
-    "#     print(f\"{X_train.shape[0]} valid sequences.\")\n",
-    "#     print(f\"Input shape: {X_train.shape}, Delta Output shape: {y_train.shape}\")\n",
-    "# \n",
-    "#     # --- Normalize Input and Output ---\n",
-    "#     X_mean = X_train.mean(axis=(0, 1), keepdims=True)  # shape: (1, 1, 6)\n",
-    "#     X_std = X_train.std(axis=(0, 1), keepdims=True) + 1e-8\n",
-    "# \n",
-    "#     y_mean = y_train.mean(axis=(0, 1), keepdims=True)  # shape: (1, 1, 2)\n",
-    "#     y_std = y_train.std(axis=(0, 1), keepdims=True) + 1e-8\n",
-    "# \n",
-    "#     X_train = (X_train - X_mean) / X_std\n",
-    "#     y_train = (y_train - y_mean) / y_std\n",
-    "#     return X_mean, X_std, y_mean, y_std\n",
-    "# X_mean, X_std, y_mean, y_std = stats()"
+    "# figure out stats\n",
+    "def stats():\n",
+    "    Tobs = 50\n",
+    "    Tpred = 60\n",
+    "    n_scenarios = standardized_train_data.shape[0]\n",
+    "    X_train_raw = []\n",
+    "    y_train_deltas = []\n",
+    "\n",
+    "    for i in range(n_scenarios):\n",
+    "        ego_data = standardized_train_data[i, 0, :, :]\n",
+    "        if np.all(ego_data == 0):\n",
+    "            continue\n",
+    "\n",
+    "        observed = ego_data[:Tobs]            # shape (50, 6)\n",
+    "        future = ego_data[Tobs:Tobs+Tpred, :2]\n",
+    "        last_obs_pos = observed[-1, :2]\n",
+    "\n",
+    "        if np.any(np.all(observed == 0, axis=1)) or np.any(np.all(future == 0, axis=1)):\n",
+    "            continue\n",
+    "\n",
+    "        # Compute deltas w.r.t. previous future timestep\n",
+    "        delta = np.diff(np.vstack([last_obs_pos, future]), axis=0)  # (60, 2)\n",
+    "\n",
+    "        X_train_raw.append(observed)\n",
+    "        y_train_deltas.append(delta)\n",
+    "\n",
+    "\n",
+    "    X_train = np.array(X_train_raw)\n",
+    "    y_train = np.array(y_train_deltas)\n",
+    "\n",
+    "    print(f\"{X_train.shape[0]} valid sequences.\")\n",
+    "    print(f\"Input shape: {X_train.shape}, Delta Output shape: {y_train.shape}\")\n",
+    "\n",
+    "    # --- Normalize Input and Output ---\n",
+    "    X_mean = X_train.mean(axis=(0, 1), keepdims=True)  # shape: (1, 1, 6)\n",
+    "    X_std = X_train.std(axis=(0, 1), keepdims=True) + 1e-8\n",
+    "\n",
+    "    y_mean = y_train.mean(axis=(0, 1), keepdims=True)  # shape: (1, 1, 2)\n",
+    "    y_std = y_train.std(axis=(0, 1), keepdims=True) + 1e-8\n",
+    "\n",
+    "    X_train = (X_train - X_mean) / X_std\n",
+    "    y_train = (y_train - y_mean) / y_std\n",
+    "    return X_mean, X_std, y_mean, y_std\n",
+    "X_mean, X_std, y_mean, y_std = stats()"
    ]
   },
   {
@@ -1772,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "11f6401b403c51b",
    "metadata": {
     "ExecuteTime": {
@@ -1906,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "907c41122d6ed7b9",
    "metadata": {
     "ExecuteTime": {
@@ -1917,12 +1950,20 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission file 'lstm_attention_submission.csv' saved with shape (126000, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "def generate_submission(data, output_csv, Tobs=50, Tpred=60):\n",
+    "def generate_submission(data, output_csv, model, Tobs=50, Tpred=60, X_mean=None, X_std=None, y_mean=None, y_std=None):\n",
     "    \"\"\"\n",
     "    Applies standardization, forecasting, and de-standardization to generate\n",
     "    a submission CSV in the format: index,x,y\n",
@@ -1930,41 +1971,45 @@
     "    Args:\n",
     "        data (np.ndarray): Test data of shape (num_scenarios, 50, 110, 6)\n",
     "        output_csv (str): Output CSV file path\n",
+    "        model: Trained LSTM model\n",
     "        Tobs (int): Number of observed time steps\n",
     "        Tpred (int): Number of time steps to predict\n",
+    "        X_mean, X_std: Optional normalization stats for input\n",
+    "        y_mean, y_std: Optional normalization stats for output\n",
     "    \"\"\"\n",
-    "\n",
     "    predictions = []\n",
-    "\n",
+    "    \n",
     "    for i in range(data.shape[0]):\n",
     "        scenario_data = data[i]  # Shape: (50, 110, 6)\n",
-    "\n",
+    "        \n",
     "        # Standardize coordinates\n",
     "        standardized_data, min_values = standardize_data_dimensions(scenario_data)\n",
-    "\n",
-    "        # Extract ego agent data (agent 0)\n",
+    "        \n",
+    "        # Extract ego agent data (agent 0) - transpose to get correct shape\n",
     "        ego_agent_data = standardized_data[:, 0, :]  # Shape: (50, 6)\n",
-    "\n",
+    "        ego_agent_data = ego_agent_data[np.newaxis, :, :]  # Shape: (1, 50, 6)\n",
+    "        \n",
     "        # Predict future positions for the ego agent\n",
     "        predicted_positions = forecast_positions(\n",
-    "            ego_agent_data[np.newaxis, :, :], Tobs, Tpred, model\n",
+    "            ego_agent_data, Tobs, Tpred, model, X_mean, X_std, y_mean, y_std\n",
     "        )  # Shape: (60, 2)\n",
-    "\n",
+    "        \n",
     "        # De-standardize predicted positions\n",
     "        predicted_positions[:, 0] += min_values[0]  # x\n",
     "        predicted_positions[:, 1] += min_values[1]  # y\n",
-    "\n",
+    "        \n",
     "        # Append to all predictions\n",
     "        predictions.extend(predicted_positions)\n",
-    "\n",
+    "    \n",
     "    # Create submission DataFrame\n",
     "    submission_df = pd.DataFrame(predictions, columns=[\"x\", \"y\"])\n",
     "    submission_df.index.name = 'index'\n",
     "    submission_df.to_csv(output_csv)\n",
-    "\n",
     "    print(f\"Submission file '{output_csv}' saved with shape {submission_df.shape}\")\n",
     "\n",
-    "generate_submission(test_data, 'lstm_attention_submission.csv')"
+    "# Example usage:\n",
+    "generate_submission(test_data, 'lstm_attention_submission.csv', model, \n",
+    "                   X_mean=X_mean, X_std=X_std, y_mean=y_mean, y_std=y_std)"
    ]
   },
   {
