--- a/lstm_social.ipynb
+++ b/lstm_social.ipynb
@@ -2839,8 +2839,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "8955d24a-3bed-429c-9456-010d79f5bdbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating predictions for 2100 scenarios...\n",
+      "Processing scenario 1/2100\n",
+      "Processing scenario 211/2100\n",
+      "Processing scenario 421/2100\n",
+      "Processing scenario 631/2100\n",
+      "Processing scenario 841/2100\n",
+      "Processing scenario 1051/2100\n",
+      "Processing scenario 1261/2100\n",
+      "Processing scenario 1471/2100\n",
+      "Processing scenario 1681/2100\n",
+      "Processing scenario 1891/2100\n",
+      "Submission file 'social_lstm_submission.csv' saved with shape (126000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_social_lstm_submission(test_data, model, 'social_lstm_submission.csv',\n",
+    "                               X_mean=X_mean, X_std=X_std, y_mean=y_mean, y_std=y_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c16b2b0b-0e89-485c-bcce-086e85be4e04",
    "metadata": {},
    "outputs": [],
    "source": []
