added parallelization to augmentation class

--- a/lstm_attention.ipynb
+++ b/lstm_attention.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "id": "69207995c2b68685",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "LSTM with attention.\n",
@@ -24,10 +21,7 @@
      "end_time": "2025-05-29T20:31:11.408289Z",
      "start_time": "2025-05-29T20:31:07.814153Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -90,6 +84,202 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from typing import Tuple, List, Optional\n",
+    "import random\n",
+    "from joblib import Parallel, delayed\n",
+    "from functools import partial\n",
+    "import os\n",
+    "from tqdm import tqdm  # Added for progress bars\n",
+    "\n",
+    "class ArgoverseAugmentor:\n",
+    "    \"\"\"\n",
+    "    Data augmentation class for Argoverse trajectory data.\n",
+    "    Supports rotations, translations, and horizontal/vertical flips.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, seed: Optional[int] = None):\n",
+    "        \"\"\"\n",
+    "        Initialize the augmentor.\n",
+    "        \n",
+    "        Args:\n",
+    "            seed: Random seed for reproducible augmentations\n",
+    "        \"\"\"\n",
+    "        if seed is not None:\n",
+    "            np.random.seed(seed)\n",
+    "            random.seed(seed)\n",
+    "        self.seed = seed\n",
+    "    \n",
+    "    def rotate_trajectory(self, trajectory: np.ndarray, angle: float) -> np.ndarray:\n",
+    "        if trajectory.shape[-1] < 2:\n",
+    "            raise ValueError(\"Trajectory must have at least 2 features (x, y)\")\n",
+    "        cos_a, sin_a = np.cos(angle), np.sin(angle)\n",
+    "        rotation_matrix = np.array([[cos_a, -sin_a],\n",
+    "                                    [sin_a, cos_a]])\n",
+    "        rotated_trajectory = trajectory.copy()\n",
+    "        rotated_xy = trajectory[:, :2] @ rotation_matrix.T\n",
+    "        rotated_trajectory[:, :2] = rotated_xy\n",
+    "        return rotated_trajectory\n",
+    "    \n",
+    "    def translate_trajectory(self, trajectory: np.ndarray, dx: float, dy: float) -> np.ndarray:\n",
+    "        if trajectory.shape[-1] < 2:\n",
+    "            raise ValueError(\"Trajectory must have at least 2 features (x, y)\")\n",
+    "        translated_trajectory = trajectory.copy()\n",
+    "        translated_trajectory[:, 0] += dx\n",
+    "        translated_trajectory[:, 1] += dy\n",
+    "        return translated_trajectory\n",
+    "    \n",
+    "    def flip_horizontal(self, trajectory: np.ndarray) -> np.ndarray:\n",
+    "        if trajectory.shape[-1] < 2:\n",
+    "            raise ValueError(\"Trajectory must have at least 2 features (x, y)\")\n",
+    "        flipped = trajectory.copy()\n",
+    "        flipped[:, 0] = -flipped[:, 0]\n",
+    "        return flipped\n",
+    "    \n",
+    "    def flip_vertical(self, trajectory: np.ndarray) -> np.ndarray:\n",
+    "        if trajectory.shape[-1] < 2:\n",
+    "            raise ValueError(\"Trajectory must have at least 2 features (x, y)\")\n",
+    "        flipped = trajectory.copy()\n",
+    "        flipped[:, 1] = -flipped[:, 1]\n",
+    "        return flipped\n",
+    "    \n",
+    "    def augment_single_sample(self, sample: np.ndarray, \n",
+    "                              rotation_range: float = np.pi/4,\n",
+    "                              translation_range: float = 5.0,\n",
+    "                              flip_prob: float = 0.5) -> np.ndarray:\n",
+    "        augmented = sample.copy()\n",
+    "        angle = np.random.uniform(-rotation_range, rotation_range)\n",
+    "        dx = np.random.uniform(-translation_range, translation_range)\n",
+    "        dy = np.random.uniform(-translation_range, translation_range)\n",
+    "        \n",
+    "        if len(sample.shape) == 2:\n",
+    "            trajectory = sample\n",
+    "            if not np.all(trajectory == 0):\n",
+    "                trajectory = self.rotate_trajectory(trajectory, angle)\n",
+    "                trajectory = self.translate_trajectory(trajectory, dx, dy)\n",
+    "                if np.random.random() < flip_prob:\n",
+    "                    trajectory = self.flip_horizontal(trajectory)\n",
+    "                if np.random.random() < flip_prob:\n",
+    "                    trajectory = self.flip_vertical(trajectory)\n",
+    "                augmented = trajectory\n",
+    "        elif len(sample.shape) == 3:\n",
+    "            for agent_idx in range(sample.shape[1]):\n",
+    "                trajectory = sample[:, agent_idx, :]\n",
+    "                if np.all(trajectory == 0):\n",
+    "                    continue\n",
+    "                trajectory = self.rotate_trajectory(trajectory, angle)\n",
+    "                trajectory = self.translate_trajectory(trajectory, dx, dy)\n",
+    "                if np.random.random() < flip_prob:\n",
+    "                    trajectory = self.flip_horizontal(trajectory)\n",
+    "                if np.random.random() < flip_prob:\n",
+    "                    trajectory = self.flip_vertical(trajectory)\n",
+    "                augmented[:, agent_idx, :] = trajectory\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unsupported sample shape: {sample.shape}\")\n",
+    "        \n",
+    "        return augmented\n",
+    "\n",
+    "    def augment_dataset(self, data: np.ndarray, \n",
+    "                        num_augmentations: int = 5,\n",
+    "                        rotation_range: float = np.pi/4,\n",
+    "                        translation_range: float = 5.0,\n",
+    "                        flip_prob: float = 0.5,\n",
+    "                        return_original: bool = True,\n",
+    "                        n_jobs: Optional[int] = None,\n",
+    "                        batch_size: Optional[int] = None) -> np.ndarray:\n",
+    "        original_size = data.shape[0]\n",
+    "        augmented_samples = []\n",
+    "        \n",
+    "        if return_original:\n",
+    "            augmented_samples.append(data)\n",
+    "\n",
+    "        if n_jobs is None:\n",
+    "            n_jobs = min(os.cpu_count(), 8)\n",
+    "        elif n_jobs == -1:\n",
+    "            n_jobs = os.cpu_count()\n",
+    "\n",
+    "        if batch_size is None:\n",
+    "            batch_size = max(1, original_size // n_jobs)\n",
+    "\n",
+    "        print(f\"Using {n_jobs} jobs with batch size {batch_size}\")\n",
+    "        \n",
+    "        for aug_idx in tqdm(range(num_augmentations), desc=\"Augmentations\"):\n",
+    "            batches = [data[i:i + batch_size] for i in range(0, original_size, batch_size)]\n",
+    "            seed = self.seed + aug_idx if self.seed is not None else None\n",
+    "\n",
+    "            augmented_batches = Parallel(n_jobs=n_jobs)(\n",
+    "                delayed(_augment_batch_worker)(\n",
+    "                    batch,\n",
+    "                    rotation_range,\n",
+    "                    translation_range,\n",
+    "                    flip_prob,\n",
+    "                    seed\n",
+    "                ) for batch in tqdm(batches, desc=f\"Processing aug {aug_idx + 1}\", leave=False)\n",
+    "            )\n",
+    "\n",
+    "            augmented_batch = np.concatenate(augmented_batches, axis=0)\n",
+    "            augmented_samples.append(augmented_batch)\n",
+    "\n",
+    "        return np.concatenate(augmented_samples, axis=0)\n",
+    "\n",
+    "    def visualize_augmentations(self, original_sample: np.ndarray, \n",
+    "                                num_examples: int = 4,\n",
+    "                                agent_idx: int = 0) -> None:\n",
+    "        fig, axes = plt.subplots(1, num_examples + 1, figsize=(15, 3))\n",
+    "        \n",
+    "        if len(original_sample.shape) == 2:\n",
+    "            orig_traj = original_sample[:, :2]\n",
+    "        elif len(original_sample.shape) == 3:\n",
+    "            orig_traj = original_sample[:, agent_idx, :2]\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unsupported sample shape: {original_sample.shape}\")\n",
+    "        \n",
+    "        axes[0].plot(orig_traj[:, 0], orig_traj[:, 1], 'b-o', markersize=3)\n",
+    "        axes[0].set_title('Original')\n",
+    "        axes[0].grid(True)\n",
+    "        axes[0].axis('equal')\n",
+    "        \n",
+    "        for i in range(num_examples):\n",
+    "            aug_sample = self.augment_single_sample(original_sample)\n",
+    "            if len(aug_sample.shape) == 2:\n",
+    "                aug_traj = aug_sample[:, :2]\n",
+    "            else:\n",
+    "                aug_traj = aug_sample[:, agent_idx, :2]\n",
+    "            axes[i + 1].plot(aug_traj[:, 0], aug_traj[:, 1], 'r-o', markersize=3)\n",
+    "            axes[i + 1].set_title(f'Augmented {i + 1}')\n",
+    "            axes[i + 1].grid(True)\n",
+    "            axes[i + 1].axis('equal')\n",
+    "        \n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "\n",
+    "\n",
+    "def _augment_batch_worker(batch_data: np.ndarray,\n",
+    "                          rotation_range: float,\n",
+    "                          translation_range: float,\n",
+    "                          flip_prob: float,\n",
+    "                          seed: Optional[int] = None) -> np.ndarray:\n",
+    "    if seed is not None:\n",
+    "        np.random.seed(seed + os.getpid())\n",
+    "        random.seed(seed + os.getpid())\n",
+    "\n",
+    "    augmentor = ArgoverseAugmentor(seed=None)  # Prevent resetting seed inside each sample\n",
+    "    return np.array([augmentor.augment_single_sample(sample,\n",
+    "                                                     rotation_range,\n",
+    "                                                     translation_range,\n",
+    "                                                     flip_prob)\n",
+    "                     for sample in batch_data])"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1237d950df0041d7"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "14d9241b88b2e2e4",
    "metadata": {
@@ -97,10 +287,7 @@
      "end_time": "2025-05-29T20:31:12.660923Z",
      "start_time": "2025-05-29T20:31:12.603987Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -117,10 +304,7 @@
      "end_time": "2025-05-29T20:31:12.661641Z",
      "start_time": "2025-05-29T20:31:12.630902Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -196,10 +380,7 @@
      "end_time": "2025-05-29T20:31:12.662294Z",
      "start_time": "2025-05-29T20:31:12.635822Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -257,6 +438,45 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Initialize augmentor\n",
+    "augmentor = ArgoverseAugmentor(seed=42)\n",
+    "\n",
+    "# File path for cached augmented data\n",
+    "augmented_pkl_path = Path(\"augmented_train.pkl\")\n",
+    "\n",
+    "# Check if the file exists\n",
+    "if augmented_pkl_path.exists():\n",
+    "    print(\"Loading augmented data from pickle file...\")\n",
+    "    with open(augmented_pkl_path, \"rb\") as f:\n",
+    "        augmented_train = pickle.load(f)\n",
+    "else:\n",
+    "    print(\"Augmented data not found. Running augmentation...\")\n",
+    "    augmented_train = augmentor.augment_dataset(\n",
+    "        train_data, \n",
+    "        num_augmentations=5,\n",
+    "        n_jobs=-1,  \n",
+    "        batch_size=25\n",
+    "    )\n",
+    "    print(\"Saving augmented data to pickle file...\")\n",
+    "    with open(augmented_pkl_path, \"wb\") as f:\n",
+    "        pickle.dump(augmented_train, f)\n",
+    "\n",
+    "print(f\"Original shape: {train_data.shape}\")\n",
+    "print(f\"Augmented shape: {augmented_train.shape}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "df51d779647c77af"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "3c81976ba8c9b548",
    "metadata": {
@@ -264,10 +484,7 @@
      "end_time": "2025-05-29T20:31:43.984732Z",
      "start_time": "2025-05-29T20:31:12.649083Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -306,7 +523,7 @@
    ],
    "source": [
     "standardized_train_data, min_values = parallel_standardize_training_data(\n",
-    "    train_data, \n",
+    "    augmented_train, \n",
     "    n_jobs=-1,  # Use all available cores\n",
     "    verbose=True\n",
     ")\n",
@@ -322,10 +539,7 @@
      "end_time": "2025-05-29T20:31:44.059459Z",
      "start_time": "2025-05-29T20:31:43.413293Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -363,10 +577,7 @@
      "end_time": "2025-05-29T20:31:44.061847Z",
      "start_time": "2025-05-29T20:31:43.441321Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -418,10 +629,7 @@
      "end_time": "2025-05-29T20:35:31.734388Z",
      "start_time": "2025-05-29T20:35:31.730407Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -478,10 +686,7 @@
      "end_time": "2025-05-29T20:35:31.860939Z",
      "start_time": "2025-05-29T20:35:31.859179Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -534,10 +739,7 @@
      "end_time": "2025-05-29T20:35:32.032707Z",
      "start_time": "2025-05-29T20:35:32.025961Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -563,10 +765,7 @@
      "end_time": "2025-05-29T20:35:32.166332Z",
      "start_time": "2025-05-29T20:35:32.159768Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -746,10 +945,7 @@
      "end_time": "2025-05-29T20:35:32.305413Z",
      "start_time": "2025-05-29T20:35:32.301588Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -792,10 +988,7 @@
      "end_time": "2025-05-29T20:35:32.439120Z",
      "start_time": "2025-05-29T20:35:32.435880Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -840,10 +1033,7 @@
      "end_time": "2025-05-29T20:35:32.581507Z",
      "start_time": "2025-05-29T20:35:32.576019Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -874,10 +1064,7 @@
      "end_time": "2025-05-29T20:35:32.873166Z",
      "start_time": "2025-05-29T20:35:32.860029Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1043,10 +1230,7 @@
      "end_time": "2025-05-29T20:35:33.290708Z",
      "start_time": "2025-05-29T20:35:33.284273Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1081,10 +1265,7 @@
      "end_time": "2025-05-29T20:35:33.427413Z",
      "start_time": "2025-05-29T20:35:33.423950Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1113,10 +1294,7 @@
      "end_time": "2025-05-29T20:35:33.769461Z",
      "start_time": "2025-05-29T20:35:33.765198Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1180,10 +1358,7 @@
      "end_time": "2025-05-29T20:35:34.135865Z",
      "start_time": "2025-05-29T20:35:34.109898Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1262,10 +1437,7 @@
      "end_time": "2025-05-29T20:35:34.469765Z",
      "start_time": "2025-05-29T20:35:34.464024Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1333,10 +1505,7 @@
      "end_time": "2025-05-29T20:35:35.378237Z",
      "start_time": "2025-05-29T20:35:35.373204Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1352,10 +1521,7 @@
      "end_time": "2025-05-29T20:35:37.227850Z",
      "start_time": "2025-05-29T20:35:35.499244Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1379,10 +1545,7 @@
      "end_time": "2025-05-29T20:35:37.763357Z",
      "start_time": "2025-05-29T20:35:37.750070Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1448,10 +1611,7 @@
     "ExecuteTime": {
      "start_time": "2025-05-29T20:31:45.325892Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1656,10 +1816,7 @@
     "ExecuteTime": {
      "start_time": "2025-05-29T20:31:45.326465Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1683,10 +1840,7 @@
      "end_time": "2025-05-29T20:31:45.327927Z",
      "start_time": "2025-05-29T20:31:45.327309Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1766,10 +1920,7 @@
      "end_time": "2025-05-29T20:31:45.328472Z",
      "start_time": "2025-05-29T20:31:45.328095Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1812,10 +1963,7 @@
      "end_time": "2025-05-29T20:31:45.333420Z",
      "start_time": "2025-05-29T20:31:45.328675Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1884,10 +2032,7 @@
     "ExecuteTime": {
      "start_time": "2025-05-29T20:31:45.329244Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1945,10 +2090,7 @@
     "ExecuteTime": {
      "start_time": "2025-05-29T20:31:45.329765Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
