--- a/lstm1.ipynb
+++ b/lstm1.ipynb
@@ -40,10 +40,7 @@
      "end_time": "2025-05-30T19:59:34.294156Z",
      "start_time": "2025-05-30T19:59:34.066491Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -341,10 +338,7 @@
      "end_time": "2025-05-30T19:59:34.405790Z",
      "start_time": "2025-05-30T19:59:34.403969Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -420,10 +414,7 @@
      "end_time": "2025-05-30T19:59:34.405790Z",
      "start_time": "2025-05-30T19:59:34.403969Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -499,10 +490,7 @@
      "end_time": "2025-05-30T19:59:35.013159Z",
      "start_time": "2025-05-30T19:59:34.999388Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -560,6 +548,18 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# full agents are too much data; only want 5 agents worth\n",
+    "train_data = train_data[:, :5, :, :]"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c9cea0152b3f9892"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "fd1173eb5f0afb2d",
    "metadata": {
@@ -567,10 +567,7 @@
      "start_time": "2025-05-30T19:59:35.583428Z"
     },
     "collapsed": false,
-    "is_executing": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "is_executing": true
    },
    "outputs": [
     {
@@ -600,25 +597,25 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001b[A\n",
+      "Augmentations:   0%|          | 0/5 [00:00<?, ?it/s]\u001B[A\n",
       "\n",
-      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Processing aug 1:  50%|█████     | 40/80 [00:01<00:01, 30.65it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1:  50%|█████     | 40/80 [00:01<00:01, 30.65it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Processing aug 1: 100%|██████████| 80/80 [00:02<00:00, 37.62it/s]\u001b[A\u001b[A\n",
+      "Processing aug 1: 100%|██████████| 80/80 [00:02<00:00, 37.62it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                                 \u001b[A\u001b[A\n",
-      "Augmentations:  20%|██        | 1/5 [00:05<00:21,  5.44s/it]\u001b[A\n",
+      "                                                                 \u001B[A\u001B[A\n",
+      "Augmentations:  20%|██        | 1/5 [00:05<00:21,  5.44s/it]\u001B[A\n",
       "\n",
-      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "Processing aug 2:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
       "\n",
-      "Processing aug 2: 100%|██████████| 80/80 [00:00<00:00, 232.86it/s]\u001b[A\u001b[A\n",
+      "Processing aug 2: 100%|██████████| 80/80 [00:00<00:00, 232.86it/s]\u001B[A\u001B[A\n",
       "\n",
-      "                                                                  \u001b[A\u001b[A\n",
-      "Augmentations:  40%|████      | 2/5 [00:09<00:13,  4.37s/it]\u001b[A\n",
+      "                                                                  \u001B[A\u001B[A\n",
+      "Augmentations:  40%|████      | 2/5 [00:09<00:13,  4.37s/it]\u001B[A\n",
       "\n",
-      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001b[A\u001b[A"
+      "Processing aug 3:   0%|          | 0/80 [00:00<?, ?it/s]\u001B[A\u001B[A"
      ]
     }
    ],
@@ -677,10 +674,7 @@
      "end_time": "2025-05-30T19:41:35.979602Z",
      "start_time": "2025-05-30T19:41:35.938072Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -688,10 +682,10 @@
      "evalue": "name 'augmented_train' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m standardized_train_data, min_values \u001b[38;5;241m=\u001b[39m parallel_standardize_training_data(\n\u001b[0;32m----> 2\u001b[0m     \u001b[43maugmented_train\u001b[49m, \n\u001b[1;32m      3\u001b[0m     n_jobs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,  \u001b[38;5;66;03m# Use all available cores\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m      5\u001b[0m )\n\u001b[1;32m      6\u001b[0m standardized_train_data\u001b[38;5;241m.\u001b[39mshape\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'augmented_train' is not defined"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m standardized_train_data, min_values \u001B[38;5;241m=\u001B[39m parallel_standardize_training_data(\n\u001B[0;32m----> 2\u001B[0m     \u001B[43maugmented_train\u001B[49m, \n\u001B[1;32m      3\u001B[0m     n_jobs\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m,  \u001B[38;5;66;03m# Use all available cores\u001B[39;00m\n\u001B[1;32m      4\u001B[0m     verbose\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[1;32m      5\u001B[0m )\n\u001B[1;32m      6\u001B[0m standardized_train_data\u001B[38;5;241m.\u001B[39mshape\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'augmented_train' is not defined"
      ]
     }
    ],
@@ -713,10 +707,7 @@
      "end_time": "2025-05-02T17:40:42.779341Z",
      "start_time": "2025-05-02T17:40:37.771284Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -746,10 +737,7 @@
      "end_time": "2025-05-02T17:40:42.786049Z",
      "start_time": "2025-05-02T17:40:42.783787Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -807,10 +795,7 @@
      "end_time": "2025-05-02T18:15:51.012605Z",
      "start_time": "2025-05-02T18:15:51.003936Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -851,10 +836,7 @@
      "end_time": "2025-05-02T19:20:44.861403Z",
      "start_time": "2025-05-02T19:20:44.758718Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -982,10 +964,7 @@
      "end_time": "2025-05-02T19:20:47.293888Z",
      "start_time": "2025-05-02T19:20:47.285992Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1025,10 +1004,7 @@
      "end_time": "2025-05-02T18:42:28.285866Z",
      "start_time": "2025-05-02T18:41:59.875150Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1596,10 +1572,7 @@
      "end_time": "2025-05-02T18:42:54.682368Z",
      "start_time": "2025-05-02T18:42:54.675886Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1634,10 +1607,7 @@
      "end_time": "2025-05-02T18:42:55.168565Z",
      "start_time": "2025-05-02T18:42:55.165875Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1714,10 +1684,7 @@
      "end_time": "2025-05-02T18:42:56.727430Z",
      "start_time": "2025-05-02T18:42:56.726626Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1796,10 +1763,7 @@
      "end_time": "2025-05-03T01:00:46.798817Z",
      "start_time": "2025-05-03T01:00:35.906297Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1852,10 +1816,7 @@
      "end_time": "2025-05-02T22:42:07.483287Z",
      "start_time": "2025-05-02T19:20:54.021001Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2267,10 +2228,7 @@
      "end_time": "2025-05-03T01:01:38.098690Z",
      "start_time": "2025-05-03T01:01:38.097196Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -2340,10 +2298,7 @@
      "end_time": "2025-05-03T01:12:28.986816Z",
      "start_time": "2025-05-03T01:04:00.357291Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2402,10 +2357,7 @@
      "end_time": "2025-05-03T06:16:59.708670Z",
      "start_time": "2025-05-03T06:15:13.300547Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2480,10 +2432,7 @@
    "execution_count": null,
    "id": "94a6d7a17d8677e1",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
